--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "extension-skeleton",
-  "version": "0.3.0",
-  "description": "Bare Google Chrome extension skeleton.",
+  "name": "Time Tracker",
+  "version": "0.1",
+  "description": "Google Chrome extension adds a time tracker to Asana",
   "engines": {
     "node": "7.0.0",
     "npm": "3.10.8"
