--- a/package.json
+++ b/package.json
@@ -7,39 +7,41 @@
     "npm": "3.10.8"
   },
   "scripts": {
-    "build": "(if not exist \"./build/prod\" mkdir \"./build/prod\") && webpack --config ./webpack/webpack.config.prod.js",
-    "start": "(if not exist \"./build/dev\" mkdir \"./build/dev\") && webpack --config ./webpack/webpack.config.dev.js",
+    "build": "(if not exist \"./build/prod\" mkdir \"./build/prod\") && webpack --mode production --config ./webpack/webpack.config.prod.js",
+    "start": "(if not exist \"./build/dev\" mkdir \"./build/dev\") && webpack --mode development --config ./webpack/webpack.config.dev.js",
     "lint": "eslint src/js/",
-    "test": "mocha-webpack --watch --webpack-config ./webpack/webpack.config.test.js \"src/js/**/*.spec.js\"",
+    "test": "mocha-webpack --webpack-config ./webpack/webpack.config.test.js \"src/js/**/*.spec.js\"",
     "test:ci": "mocha-webpack --webpack-config ./webpack/webpack.config.test.js \"src/js/**/*.spec.js\""
   },
   "dependencies": {
-    "jquery": "3.1.1",
-    "lodash": "4.17.4"
+    "jquery": "^3.3.1",
+    "lodash": "^4.17.5"
   },
   "devDependencies": {
-    "babel-core": "6.18.2",
-    "babel-eslint": "7.1.0",
-    "babel-loader": "6.2.7",
-    "babel-plugin-module-resolver": "2.3.0",
-    "babel-plugin-transform-runtime": "6.15.0",
-    "babel-preset-es2015": "6.18.0",
-    "babel-preset-stage-2": "6.18.0",
-    "copy-webpack-plugin": "4.0.1",
-    "crx-webpack-plugin": "0.1.5",
-    "css-loader": "0.26.0",
-    "eslint": "3.14.0",
-    "eslint-config-airbnb": "14.0.0",
-    "eslint-import-resolver-babel-module": "2.2.1",
-    "eslint-plugin-import": "2.2.0",
-    "eventemitter2": "0.4.14",
-    "mocha": "1.20.0",
-    "mocha-webpack": "0.7.0",
-    "sinon": "1.12.2",
-    "webpack": "2.2.1",
-    "webpack-dev-server": "1.16.2",
-    "webpack-node-externals": "1.5.4",
-    "webpack-version-file-plugin": "0.2.2"
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.2",
+    "babel-loader": "^7.1.3",
+    "babel-plugin-module-resolver": "^3.1.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "copy-webpack-plugin": "^4.4.2",
+    "crx-webpack-plugin": "^0.1.5",
+    "css-loader": "^0.28.10",
+    "eslint": "^4.18.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-import-resolver-babel-module": "^4.0.0",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eventemitter2": "^5.0.1",
+    "mocha": "^5.0.1",
+    "mocha-webpack": "^1.0.1",
+    "sinon": "^4.4.2",
+    "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.9",
+    "webpack-dev-server": "^3.1.0",
+    "webpack-node-externals": "^1.6.0",
+    "webpack-version-file-plugin": "^0.2.3"
   },
   "export-symbol": "extensionSkeleton.exports"
 }
