--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,17 +2,20 @@
   "manifest_version": 2,
   "icons": { "128": "images/icon.png" },
   "browser_action": {
-    "default_icon": "images/icon.png",
+    "default_icon": {
+      "19": "images/clock-off-19.png",
+      "38": "images/clock-off-38.png"
+    },
     "default_popup": "html/popup.html"
   },
   "background": { "scripts": ["js/background.js"] },
   "content_scripts": [{
-    "matches": [ "http://*/*", "https://*/*" ],
+    "matches": [ "http://app.asana.com/*", "https://app.asana.com/*" ],
     "js": [ "js/content.js" ]
   }],
   "options_page": "html/options.html",
   "devtools_page": "html/devtools.html",
-  "permissions": [ "<all_urls>" ],
+  "permissions": [ "activeTab" ],
   "web_accessible_resources": [ "js/*", "html/*", "css/*", "images/*" ],
   "content_security_policy": "script-src 'self'; object-src 'self'",
   "name": "<%= package.name %>",
